# oobot

./: .env.example  .gitignore  AGENTS.md  OPENCODE.md  README.md  README_CN.md  pyproject.toml
doc/: telegram-bot-features.md
scripts/: restart.sh
src/oobot/: __init__.py  bot.py  config.py  hook.py  main.py  monitor_state.py  screenshot.py  session.py  session_monitor.py  telegram_sender.py  terminal_parser.py  tmux_manager.py  transcript_parser.py  utils.py
src/oobot/handlers/: callback_data.py  directory_browser.py  history.py  interactive_ui.py  message_queue.py  response_builder.py  status_polling.py
